# backend_lenguaje

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  documentos.json  prueba.ps1  usuarios.json
.cargo/: config.toml
pruebas/: pruebas_página_ñ.postman_collection.json  pruebas_página_ñ.postman_globals.json
src/: archivos.rs  cors.rs  documentos.rs  id.rs  main.rs  roles.rs  sesion.rs  usuarios.rs
