[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.1.0"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls"] }
rust-crypto = "^0.2"
serde_json = "1.0"